@@ -25,7 +25,7 @@ export(pml, optim.pml, pml.control, parsimony, optim.parsimony, pratchet, NJ, UN
     lento, compatible, acgt2ry, ancestral.pars, ancestral.pml, CI, RI, getClans, getSlices,
     getClips, getDiversity, midpoint, pruneTree, acctran, getRoot, plotAnc, consensusNet, 
     bab, random.addition, diversity, baseFreq, densiTree, superTree, coalSpeciesTree, 
-    pml.fit, pml.init, pml.free, edQt, lli, cladePar)
+    pml.fit, pml.init, pml.free, edQt, lli, cladePar, addConfidences)
 
 S3method('[', splits)          
 S3method(as.character, phyDat)
@@ -47,6 +47,7 @@ S3method(as.phylo, splits)
 S3method(as.splits, phylo)
 S3method(as.splits, multiPhylo)
 S3method(as.splits, prop.part)
+S3method(as.splits, networx)
 S3method(as.prop.part, splits)
 S3method(logLik, pml)
 S3method(logLik, pmlPart)
